--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
          */
         staging {
             initWith debug
-            manifestPlaceholders = [hostName:"com.example.pescarecreativa"]
+            manifestPlaceholders = [hostName: "com.example.pescarecreativa"]
             applicationIdSuffix ".debugStaging"
         }
 
@@ -44,7 +44,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/NOTICE.md'
         exclude 'META-INF/LICENSE.md'
     }
@@ -53,6 +53,9 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+    viewBinding {
+        enabled = true
     }
 }
 
